# vision_based_manipulation_rbe450x

./: .gitignore  README.md  data.csv
HW1/: RBE450X_HW1.gdoc
HW1/src/cpp_pubsub/: CMakeLists.txt  package.xml
HW1/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
HW1/src/cpp_srvcli/: CMakeLists.txt  package.xml
HW1/src/cpp_srvcli/src/: add_three_ints_client.cpp  add_three_ints_server.cpp  add_two_ints_server.cpp
HW1/src/force_pubsub/: CMakeLists.txt  package.xml
HW1/src/force_pubsub/include/: Utils.hpp
HW1/src/force_pubsub/src/: force_client.cpp  force_server.cpp
HW1/src/polygon_base/: CMakeLists.txt  package.xml
HW1/src/polygon_base/include/polygon_base/: regular_polygon.hpp
HW1/src/polygon_plugins/: CMakeLists.txt  package.xml
HW1/src/tutorial_interfaces/: CMakeLists.txt  package.xml
HW1/src/tutorial_interfaces/srv/: AddTwoForces.srv
HW2/: RBE450X_HW2.gdoc  part2.py
HW3/: RBE450X_HW3.gdoc
HW3/rrbot_simulation_files/rrbot_gazebo/: package.xml
HW3/rrbot_simulation_files/rrbot_gazebo/launch/: rrbot_world.launch.py
HW3/rrbot_simulation_files/rrbot_gazebo/src/: position_publisher.cpp
HW3/week3/: RBE450X-Gazebo.md
HW3/week3/images/: color_channels.m  edge_detection_canny.m  edge_detection_sobel.asv  hand_object_example.m  hough_lines.asv  hsv_thresholding.asv  rgb_thresholding_1.m  tests.m  thresholding_with_function.asv
HW3/week3/ros_ws/src/rrbot_description_ros2/: CMakeLists.txt
HW3/week3/ros_ws/src/rrbot_description_ros2/urdf/: gazebo_plugins.xacro
HW3/week4/: RBE450X_ROS2_Control.md
HW3/week4/ros_ws/src/opencv_test/: CMakeLists.txt
HW3/week4/ros_ws/src/opencv_test/src/: test1.cpp  test2.cpp
HW3/week4/ros_ws/src/opencv_test_py/: setup.py
HW3/week4/ros_ws/src/opencv_test_py/opencv_test_py/: 3  hw_test.py  test1.py
HW3/week4/ros_ws/src/rrbot_simulation_files/rrbot_description/ros2_control/: rrbot.ros2_control.xacro
HW3/week4/ros_ws/src/rrbot_simulation_files/rrbot_gazebo/: CMakeLists.txt
HW3/week4/ros_ws/src/rrbot_simulation_files/rrbot_gazebo/config/: gazebo_controllers.yaml
HW3/week4/ros_ws/src/rrbot_simulation_files/rrbot_gazebo/launch/: rrbot_world.launch.py
HW4/: x_y_time.csv
HW4/ros_ws/src/rrbot_gazebo/launch/: rrbot_world.launch.py
HW4/ros_ws/src/rrbot_gazebo/src/: controller_switch.cpp  position_publisher.cpp
HW4/ros_ws/src/visual_servo_controller/: package.xml  setup.cfg  setup.py
HW4/ros_ws/src/visual_servo_controller/visual_servo_controller/: show_plot.py  visual_servo.py
Vision based Manipulation/: Grasp Quality Metrics.md  HW2.md  HW3.md  Project Active Vision.md  Quiz 2.md  Quiz 3.md
Vision based Manipulation/.obsidian/: workspace
Vision based Manipulation/.obsidian/plugins/obsidian-admonition/: data.json
week3/images/: corner_detection.asv  edge_detection_sobel.m  gaussian_smoothing.asv  rgb_thresholding_2.m  thresholding.m
week3/ros_ws/src/rrbot_description_ros2/: package.xml
week3/ros_ws/src/rrbot_description_ros2/launch/: simple_launch.py
week3/ros_ws/src/rrbot_description_ros2/src/: inject_entity.py
week3/ros_ws/src/rrbot_description_ros2/urdf/: rrbot.urdf  rrbot.xacro
