<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rrbot_description_ros2</name>
  <version>0.0.0</version>
  <description>rrbot spawning package for ros2 Humble</description>
  <maintainer email="yash@todo.todo">yash</maintainer>
  <license>TODO: License declaration</license>
  <author>Yash Patil</author>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>tf_transformations</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
